infra/template.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31

Parameters:
  AWSArtifactAccountID:
    Type: String
    Description: The AWS account ID to pull artifacts from
  AWSDeployAccountID:
    Type: String
    Description: The AWS account ID to deploy to
  AWSDeployAccountName:
    Type: String
    Description: The AWS account name to deploy to
  AWSRegion:
    Type: String
    Description: The AWS region to deploy to
    Default: us-east-1
  ServiceName:
    Type: String
    Description: The service name
  SanitizedServiceName:
    Type: String
    Description: The service name, sanitized for certain characters that AWS resources don't support
  VersionedImageTag:
    Type: Number
    Description: The tag of the image you're deploying
    # This is the epoch of the day Zenable was incorporated
    MinValue: "1710288000"
  RuntimeArchitecture:
    Type: String
    Description: The Container architecture
    # ECS Task definitions require that these are set in all caps
    AllowedValues: [ARM64, X86_64]
  ZenableEnvironment:
    Type: String
    Description: The Zenable Environment where this is running
    AllowedValues: [host, container, sandbox, staging, production]
  ZenableLogLevel:
    Type: String
    Description: The log level for the lambda output.  Defaults to the onboard /etc/configuration.yaml if not set.
    Default: INFO
    AllowedValues: [TRACE, DEBUG, INFO, WARNING, ERROR, CRITICAL]
  ZenableVersion:
    Type: String
    Description: The git commit hash for this deployment

  ZenableMcpServerResourceUrl:
    Type: String
    Description: The resource url for the MCP server
  ##############################################################
  # These parameters are dynamic and do not need to be passed in
  MCPDelegatedDomainName:
    Type: AWS::SSM::Parameter::Value<String>
    Description: The delegated domain name for mcp_api service
    Default: /infrastructure/delegated_domain/mcp_zenable_app/domain_name
  MCPHostedZoneId:
    Type: AWS::SSM::Parameter::Value<String>
    Description: The Hosted Zone Id for the delegated domain name
    Default: /infrastructure/delegated_domain/mcp_zenable_app/hosted_zone_id
  AuroraPostgresVpcIdLookup:
    Type: AWS::SSM::Parameter::Value<String>
    Description: The VPC ID for the PostgreSQL database
    Default: /aurora/postgres/vpc_id
  AuroraPostgresPrivateSubnetIdsLookup:
    Type: AWS::SSM::Parameter::Value<CommaDelimitedList>
    Description: List of Private subnet IDs from the Aurora Postgres module
    Default: /aurora/postgres/private_subnets
  AuroraPostgresSecurityGroupIdLookup:
    Type: AWS::SSM::Parameter::Value<String>
    Description: The Security Group ID for the PostgreSQL database
    Default: /aurora/postgres/security_group_id
  PublicSubnetIdsLookup:
    Type: AWS::SSM::Parameter::Value<CommaDelimitedList>
    Description: List of Private subnet IDs from the VPC module
    Default: /networking/public_subnets
  CreditsTableArn:
    Type: AWS::SSM::Parameter::Value<String>
    Description: The ARN of the shared credits DynamoDB table
    Default: /credits/table_arn
  ##############################################################
  ##########################################
  # These params are custom for this service
  CustomerBootstrapTopic:
    Type: String
    Description: The name of the customer bootstrap topic to publish to
  ##########################################

Conditions:
  IsLocal: !Or
    - !Equals [!Ref ZenableEnvironment, "host"]
    - !Equals [!Ref ZenableEnvironment, "container"]

# Schema: https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-specification-resources-and-properties.html
# Examples: https://github.com/aws/aws-sam-cli/tree/6f750a8e127ee3c4e7d3c2e56b47bf63ef0fb9db/tests/functional/commands/validate/lib/models
Resources:
  ECSExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${ServiceName}_execution_runtime"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: ECSTaskExecutionPolicy
          PolicyDocument:
            Version: "2012-10-17"
            # These are the permissions of ecs-tasks.amazonaws.com itself, not our runtime. It needs meta-permissions like the ability to pull down the ECR
            # image and shovel logs from the containers out to cloudwatch
            Statement:
              - Effect: Allow
                Action:
                  - ecr:GetAuthorizationToken
                  - ecr:BatchCheckLayerAvailability
                  - ecr:GetDownloadUrlForLayer
                  - ecr:BatchGetImage
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: "*"

  ECSTaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${ServiceName}_base_runtime"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: ECSTaskPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
            # These are the permissions our task (the container/workload), meaning this is where you give it runtime permissions
              - Effect: Allow
                Action:
                  - ssm:GetParameter
                  - ssm:GetParameters
                  - ssm:GetParametersByPath
                Resource:
                  - !Sub "arn:aws:ssm:${AWSRegion}:${AWSDeployAccountID}:parameter/services/*"
                  - !Sub "arn:aws:ssm:${AWSRegion}:${AWSDeployAccountID}:parameter/aurora/postgres/admin/password"
                  - !Sub "arn:aws:ssm:${AWSRegion}:${AWSDeployAccountID}:parameter/aurora/postgres/endpoint"
              - Effect: Allow
                Action: "cloudwatch:PutMetricData"
                Resource: "*"
              # Required for publishing to KMS-encrypted SNS topics
              - Effect: Allow
                Action:
                  - kms:Decrypt
                  - kms:GenerateDataKey
                Resource: "*"
              - Effect: Allow
                Action:
                  - "bedrock:InvokeModel"
                  - "bedrock:InvokeModelWithResponseStream"
                  - "bedrock:GetInferenceProfile"
                  # Required as of AWS retiring the model access page - without this permission, Bedrock returns AccessDeniedException
                  - "aws-marketplace:ViewSubscriptions"
                # Keep this ~aligned with what's allowed in the `_BedrockConfig`'s `MODEL_ID`, with one item for each region: us-east-1, us-east-2, and us-west-2.
                # Add new regions as they're added to the inference profile(s).
                #
                # Note: requests originating in us-east-1 and us-west-2 won't be routed to us-east-2 according to the docs but we give the permissions anyways in
                # case it changes https://docs.aws.amazon.com/bedrock/latest/userguide/inference-profiles-support.html
                #
                # Yes, I wish this was a for loop (ForEach and CommaDelimitedList, aren't a fit)
                #
                # Also, yes, we did attempt to break this into separate Allow InvokeModel* and Allow GetInferenceProfiles, but you need to be able to actually
                # Invoke the inference-profile, which is a little non-intuitive
                Resource:
                  # These are inference profiles that configure where we can run inference, and do the routing
                  - !Sub "arn:aws:bedrock:${AWSRegion}:${AWSDeployAccountID}:inference-profile/us.anthropic.claude-sonnet-4-20250514-v1:0"
                  - !Sub "arn:aws:bedrock:${AWSRegion}:${AWSDeployAccountID}:inference-profile/us.anthropic.claude-sonnet-4-5-20250929-v1:0"
                  # This allows the actual foundational model inference in the various regions
                  - arn:aws:bedrock:us-east-1::foundation-model/anthropic.claude-sonnet-4-20250514-v1:0
                  - arn:aws:bedrock:us-east-2::foundation-model/anthropic.claude-sonnet-4-20250514-v1:0
                  - arn:aws:bedrock:us-west-2::foundation-model/anthropic.claude-sonnet-4-20250514-v1:0
                  - arn:aws:bedrock:us-east-1::foundation-model/anthropic.claude-sonnet-4-5-20250929-v1:0
                  - arn:aws:bedrock:us-east-2::foundation-model/anthropic.claude-sonnet-4-5-20250929-v1:0
                  - arn:aws:bedrock:us-west-2::foundation-model/anthropic.claude-sonnet-4-5-20250929-v1:0
                  - !Sub "arn:aws:bedrock:${AWSRegion}:${AWSDeployAccountID}:inference-profile/us.meta.llama4-maverick-17b-instruct-v1:0"
                  - arn:aws:bedrock:us-east-1::foundation-model/meta.llama4-maverick-17b-instruct-v1:0
                  - arn:aws:bedrock:us-east-2::foundation-model/meta.llama4-maverick-17b-instruct-v1:0
                  - arn:aws:bedrock:us-west-2::foundation-model/meta.llama4-maverick-17b-instruct-v1:0
                  - !Sub "arn:aws:bedrock:${AWSRegion}:${AWSDeployAccountID}:inference-profile/us.meta.llama4-scout-17b-instruct-v1:0"
                  - arn:aws:bedrock:us-east-1::foundation-model/meta.llama4-scout-17b-instruct-v1:0
                  - arn:aws:bedrock:us-east-2::foundation-model/meta.llama4-scout-17b-instruct-v1:0
                  - arn:aws:bedrock:us-west-2::foundation-model/meta.llama4-scout-17b-instruct-v1:0
                  - !Sub "arn:aws:bedrock:${AWSRegion}:${AWSDeployAccountID}:inference-profile/us.anthropic.claude-3-7-sonnet-20250219-v1:0"
                  - arn:aws:bedrock:us-east-1::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0
                  - arn:aws:bedrock:us-east-2::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0
                  - arn:aws:bedrock:us-west-2::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0
                  # Foundation models without inference profiles
                  # As of 2025-10-14 this is only available in us-west-2
                  - arn:aws:bedrock:us-west-2::foundation-model/qwen.qwen3-coder-480b-a35b-v1:0
              - Effect: Allow
                Action:
                  - dynamodb:PutItem
                  - dynamodb:GetItem
                  - dynamodb:UpdateItem
                  - dynamodb:DeleteItem
                  - dynamodb:Query
                  - dynamodb:Scan
                Resource:
                  - !Ref CreditsTableArn
              - Effect: Allow
                Action:
                  - sns:Publish
                Resource:
                  # This is to invoke customer bootstrap
                  - !Sub "arn:aws:sns:${AWSRegion}:${AWSDeployAccountID}:${CustomerBootstrapTopic}"

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "${SanitizedServiceName}-cluster"
      ClusterSettings:
        - Name: containerInsights
          Value: enabled

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Ref ServiceName
      # 2024-12: 1024 CPU significantly reduced startup time vs 512
      # 2026-01: Increased to 4096 CPU / 8192 MB to support parallel opengrep checks (18+ concurrent)
      Cpu: "4096"
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-memory
      Memory: "8192"
      NetworkMode: awsvpc # NetworkMode: awsvpc is currently required for a Fargate runtime
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: !Ref RuntimeArchitecture
        OperatingSystemFamily: LINUX
      ExecutionRoleArn: !GetAtt ECSExecutionRole.Arn
      TaskRoleArn: !GetAtt ECSTaskRole.Arn
      ContainerDefinitions:
        - Name: !Ref ServiceName
          Image: !Sub "${AWSArtifactAccountID}.dkr.ecr.${AWSRegion}.amazonaws.com/${ServiceName}:${VersionedImageTag}"
          Essential: true
          PortMappings:
            - ContainerPort: 8000
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWSRegion
              awslogs-stream-prefix: !Ref ServiceName
          Environment:
            - Name: ZENABLE_LOGLEVEL
              Value: !Ref ZenableLogLevel
            - Name: ZENABLE_ENVIRONMENT
              Value: !Ref ZenableEnvironment
            - Name: ZENABLE_VERSION
              Value: !Ref ZenableVersion
            - Name: GIT_PYTHON_REFRESH
              Value: "quiet"
            - Name: ZENABLE_MCP_SERVER__RESOURCE_URL
              Value: !Ref ZenableMcpServerResourceUrl
              # This should align with the LOOKUP_MAP in the Taskfile
              # Ensure secrets start with ZENABLE_LOOKUP__SECRETS__
              # Ensure the appropriate permissions are also set under Policies below
            - Name: ZENABLE_LOOKUP__SECRETS__POSTGRES_PASSWORD
              Value: "/aurora/postgres/admin/password"
            - Name: ZENABLE_LOOKUP__POSTGRES__ENDPOINT
              Value: !If
                - IsLocal
                - ""
                - "/aurora/postgres/endpoint"
            - Name: ZENABLE_LOOKUP__NOTIFY__CUSTOMER_BOOTSTRAP_SNS_TOPIC_ARN
              Value: !If
                - IsLocal
                - ""
                - "/services/customer_bootstrap/events/latest"
          HealthCheck:
            # Keep this aligned with the Docker HEALTHCHECK
            Command: ["CMD", "python", "/healthcheck.py"]
            Interval: 10
            Timeout: 5
            Retries: 3
            StartPeriod: 30

  ECSService:
    Type: AWS::ECS::Service
    # This was important and was in an AWS example https://docs.aws.amazon.com/AmazonECS/latest/developerguide/creating-resources-with-cloudformation.html
    DependsOn: LoadBalancerListener
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          Subnets: !Ref AuroraPostgresPrivateSubnetIdsLookup
          SecurityGroups:
            - !Ref ServiceSecurityGroup
      TaskDefinition: !Ref TaskDefinition
      DeploymentConfiguration:
        DeploymentCircuitBreaker:
          Enable: true
          Rollback: true
      HealthCheckGracePeriodSeconds: 30
      LoadBalancers:
        - ContainerName: !Ref ServiceName
          # The ContainerPort must correspond to a container port in the corresponding task definition
          ContainerPort: 8000
          TargetGroupArn: !Ref TargetGroup

  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/ecs/${ServiceName}"
      RetentionInDays: 30

  ServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound traffic
      VpcId: !Ref AuroraPostgresVpcIdLookup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        # This allows connectivity to Postgres
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          DestinationSecurityGroupId: !Ref AuroraPostgresSecurityGroupIdLookup
        # Remove when we implement a SSM VPC Endpoint
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound HTTPS traffic to the ALB
      VpcId: !Ref AuroraPostgresVpcIdLookup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        # We need to support port 80 so we can redirect to https since clients hit the ALB directly now
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    # This is because we've seen this ALB fail to deploy with error "vpc-098b275ea0838c595 has no internet gateway"
    Properties:
      Name: !Sub "${SanitizedServiceName}-alb"
      Scheme: internet-facing
      Subnets: !Ref PublicSubnetIdsLookup
      SecurityGroups:
        - !Ref ALBSecurityGroup

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${SanitizedServiceName}-tg"
      Protocol: HTTP
      Port: 8000
      VpcId: !Ref AuroraPostgresVpcIdLookup
      # This must be `ip` as of 2024-12 because the service's task definition is in the awsvpc network mode
      TargetType: ip
      HealthCheckPath: "/health"
      HealthCheckProtocol: HTTP
      HealthCheckIntervalSeconds: 15
      UnhealthyThresholdCount: 4
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2

  # Validation of this certificate should occur automatically if "The certificate domain is hosted in Amazon Route 53, the domain resides in your AWS account,
  # and you are using DNS validation" per https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-certificatemanager-certificate.html
  SSLCertificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Ref MCPDelegatedDomainName
      ValidationMethod: DNS
      DomainValidationOptions:
        - DomainName: !Ref MCPDelegatedDomainName
          HostedZoneId: !Ref MCPHostedZoneId

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref SSLCertificate
      DefaultActions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref TargetGroup
                Weight: 100

  HTTPRedirectListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Protocol: HTTPS
            Port: "443"
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
            StatusCode: HTTP_301

  MCPDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref MCPHostedZoneId
      Name: !Ref MCPDelegatedDomainName
      Type: A
      AliasTarget:
        DNSName: !GetAtt LoadBalancer.DNSName
        HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID

  ServiceIngressfromLoadBalancer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow traffic from ALB to ECS tasks
      GroupId: !Ref ServiceSecurityGroup
      IpProtocol: tcp
      FromPort: 8000
      ToPort: 8000
      SourceSecurityGroupId: !Ref ALBSecurityGroup
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow connections to RDS
      VpcId: !Ref AuroraPostgresVpcIdLookup
      SecurityGroupIngress: []
  ErrorNotificationTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: !Sub "${ServiceName}-errors"
      KmsMasterKeyId: alias/aws/sns
  ErrorNotificationTopicParam:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/topics/error_topics/${ServiceName}"
      Type: String
      Value: !Ref ErrorNotificationTopic
      Description: !Sub "SNS topic for error notifications for ${ServiceName}"
  ErrorMetricFilter:
    Type: AWS::Logs::MetricFilter
    Properties:
      LogGroupName: !Ref LogGroup
      FilterName: !Sub "${ServiceName}-error-monitoring"
      # some of this filter pattern is specific to lambdas, which this isn't, but it was left in because it doesn't hurt
      # it also assumes that this function has JSON-formatted logs
      FilterPattern: '{ ($.level = "ERROR") || ($.log_level = "ERROR") || ($.loglevel = "ERROR") || ($.level = "Exception") || ($.record.status = "error") || (($.record.status = "timeout") && ($.type != "platform.initReport")) }'
      MetricTransformations:
        - MetricNamespace: !Sub "${ServiceName}/Errors"
          MetricName: ErrorCount
          MetricValue: "1"
          DefaultValue: 0
  ErrorAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: !Sub "Alarm when ${ServiceName} Lambda logs any ERROR/Exception"
      Namespace: !Sub "${ServiceName}/Errors"
      MetricName: ErrorCount
      Statistic: Sum
      Period: 60
      EvaluationPeriods: 1
      Threshold: 1
      ComparisonOperator: GreaterThanOrEqualToThreshold
      TreatMissingData: notBreaching
      AlarmActions:
        - !Ref ErrorNotificationTopic
